crates/ui/src/snapshots/trpg_ui__portrait__tests__test_knight_angry.snap
---
source: crates/ui/src/portrait.rs
expression: "snap(\"test_knight\", \"angry\", 0.0, false)"
---
           ▄▄▄▀▀▀▀▀▄▄           
        ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄        
      ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
           ▄▀▀▀▀▀▀▀▀▄           
       ▄▄▄▄▀▀▀▀▀▀▀▀▀▀▄▄▄▄       
     ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄     
   ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄   
 ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄ 
--- colours ---
aaaaaaaaaaabbbcdddebbaaaaaaaaaaa
aaaaaaaabfghiijjjjjjjkfbaaaaaaaa
aaaaaabfhiijjjjjjjjjjjlmfbaaaaaa
aaaaaaejnjjjjjjjjjjjjjjojeaaaaaa
aaaaaaehloppppphjpppppoomeaaaaaa
aaaaaaenjoqqrrrjjrrrqsoooeaaaaaa
aaaaaaejjortuvrwxrvutyoooeaaaaaa
aaaaaaejjorrrrrzrrrrryoooeaaaaaa
aaaaaaejjorzArrABBrrryoooeaaaaaa
aaaaaaejjorrrCDDDDCryyoooeaaaaaa
aaaaaabEEFEGrHHHHHIyJEFFFbaaaaaa
aaaaaaaaaaabkKLLLLLkbaaaaaaaaaaa
aaaaaaaMNNNOojooooooONNNPaaaaaaa
aaaaaMijjjjQQQQRRQQQQjjjjlPaaaaa
aaaMijjjjjjQQQQRRQQQQjjjjjjlPaaa
aMijjjjjjjjQQQQRRQQQQjjjjjjjjlPa
--- legend ---
a = fg:panel_bg bg:panel_bg
b = fg:portrait_outline bg:panel_bg
c = fg:portrait_outline bg:plume_red
d = fg:plume_red bg:plume_red
e = fg:portrait_outline bg:portrait_outline
f = fg:portrait_outline bg:armor_steel
g = fg:portrait_outline bg:armor_steel_light
h = fg:armor_steel bg:armor_steel_light
i = fg:armor_steel_light bg:armor_steel
j = fg:armor_steel bg:armor_steel
k = fg:portrait_outline bg:armor_steel_dark
l = fg:armor_steel_dark bg:armor_steel
m = fg:armor_steel bg:armor_steel_dark
n = fg:armor_steel_light bg:armor_steel_light
o = fg:armor_steel_dark bg:armor_steel_dark
p = fg:armor_steel_dark bg:skin_tan_mid
q = fg:skin_tan bg:brow_dark
r = fg:skin_tan bg:skin_tan
s = fg:skin_tan_mid bg:brow_dark
t = fg:skin_tan bg:eye_white
u = fg:brow_dark bg:eye_green
v = fg:brow_dark bg:portrait_outline
w = fg:armor_steel bg:skin_tan_highlight
x = fg:armor_steel bg:skin_tan
y = fg:skin_tan_mid bg:skin_tan_mid
z = fg:skin_tan_highlight bg:skin_tan_highlight
A = fg:skin_tan_highlight bg:skin_tan
B = fg:skin_tan bg:skin_tan_shadow
C = fg:skin_tan bg:mouth_dark
D = fg:mouth_dark bg:teeth
E = fg:armor_steel bg:portrait_outline
F = fg:armor_steel_dark bg:portrait_outline
G = fg:skin_tan bg:portrait_outline
H = fg:mouth_dark bg:skin_tan
I = fg:mouth_dark bg:skin_tan_mid
J = fg:skin_tan_mid bg:portrait_outline
K = fg:skin_tan bg:armor_steel
L = fg:skin_tan_mid bg:armor_steel_dark
M = fg:armor_steel_light bg:panel_bg
N = fg:armor_steel bg:panel_bg
O = fg:portrait_outline bg:cloth_red
P = fg:armor_steel_dark bg:panel_bg
Q = fg:cloth_red bg:cloth_red
R = fg:cloth_red_dark bg:cloth_red_dark
