crates/ui/src/snapshots/trpg_ui__portrait__tests__test_knight_dimmed.snap
---
source: crates/ui/src/portrait.rs
expression: "snap(\"test_knight\", \"angry\", 0.5, false)"
---
           ▄▄▄▀▀▀▀▀▄▄           
        ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄        
      ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
           ▄▀▀▀▀▀▀▀▀▄           
       ▄▄▄▄▀▀▀▀▀▀▀▀▀▀▄▄▄▄       
     ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄     
   ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄   
 ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄ 
--- colours ---
aaaaaaaaaaabbbcdddebbaaaaaaaaaaa
aaaaaaaabfghiijjjjjjjkfbaaaaaaaa
aaaaaabfhiijjjjjjjjjjjlmfbaaaaaa
aaaaaaejnjjjjjjjjjjjjjjojeaaaaaa
aaaaaaehloppppphjpppppoomeaaaaaa
aaaaaaenjoqqrrrjjrrrqsoooeaaaaaa
aaaaaaejjortuvrwxrvutyoooeaaaaaa
aaaaaaejjorrrrrzrrrrryoooeaaaaaa
aaaaaaejjorzArrABBrrryoooeaaaaaa
aaaaaaejjorrrCDDDDCryyoooeaaaaaa
aaaaaabEEFEGrHHHHHIyJEFFFbaaaaaa
aaaaaaaaaaabkKLLLLLkbaaaaaaaaaaa
aaaaaaaMNNNOojooooooONNNPaaaaaaa
aaaaaMijjjjQQQQRRQQQQjjjjlPaaaaa
aaaMijjjjjjQQQQRRQQQQjjjjjjlPaaa
aMijjjjjjjjQQQQRRQQQQjjjjjjjjlPa
--- legend ---
a = fg:panel_bg bg:panel_bg
b = fg:#1d130d bg:panel_bg
c = fg:#1d130d bg:#723125
d = fg:#723125 bg:#723125
e = fg:#1d130d bg:#1d130d
f = fg:#1d130d bg:#5e5e60
g = fg:#1d130d bg:#767677
h = fg:#5e5e60 bg:#767677
i = fg:#767677 bg:#5e5e60
j = fg:#5e5e60 bg:#5e5e60
k = fg:#1d130d bg:#3b3b3d
l = fg:#3b3b3d bg:#5e5e60
m = fg:#5e5e60 bg:#3b3b3d
n = fg:#767677 bg:#767677
o = fg:#3b3b3d bg:#3b3b3d
p = fg:#3b3b3d bg:#664935
q = fg:#72543d bg:#2b1c11
r = fg:#72543d bg:#72543d
s = fg:#664935 bg:#2b1c11
t = fg:#72543d bg:#868077
u = fg:#2b1c11 bg:#335935
v = fg:#2b1c11 bg:#1d130d
w = fg:#5e5e60 bg:#7b6049
x = fg:#5e5e60 bg:#72543d
y = fg:#664935 bg:#664935
z = fg:#7b6049 bg:#7b6049
A = fg:#7b6049 bg:#72543d
B = fg:#72543d bg:#553b2a
C = fg:#72543d bg:#4b211b
D = fg:#4b211b bg:#868279
E = fg:#5e5e60 bg:#1d130d
F = fg:#3b3b3d bg:#1d130d
G = fg:#72543d bg:#1d130d
H = fg:#4b211b bg:#72543d
I = fg:#4b211b bg:#664935
J = fg:#664935 bg:#1d130d
K = fg:#72543d bg:#5e5e60
L = fg:#664935 bg:#3b3b3d
M = fg:#767677 bg:panel_bg
N = fg:#5e5e60 bg:panel_bg
O = fg:#1d130d bg:#622921
P = fg:#3b3b3d bg:panel_bg
Q = fg:#622921 bg:#622921
R = fg:#431c15 bg:#431c15
