crates/ui/src/snapshots/trpg_ui__portrait__tests__test_knight_mirrored.snap
---
source: crates/ui/src/portrait.rs
expression: "snap(\"test_knight\", \"neutral\", 0.0, true)"
---
           ▄▄▀▀▀▀▀▄▄▄           
        ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄        
      ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
           ▄▀▀▀▀▀▀▀▀▄           
       ▄▄▄▄▀▀▀▀▀▀▀▀▀▀▄▄▄▄       
     ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄     
   ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄   
 ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄ 
--- colours ---
aaaaaaaaaaabbcdddebbbaaaaaaaaaaa
aaaaaaaabfghhhhhhhiijkfbaaaaaaaa
aaaaaabflmhhhhhhhhhhhiijfbaaaaaa
aaaaaachnhhhhhhhhhhhhhhohcaaaaaa
aaaaaaclnnppppphjpppppnmjcaaaaaa
aaaaaacnnnqrrrshhsrrrrnhocaaaaaa
aaaaaacnnntuvcswxscvusnhhcaaaaaa
aaaaaacnnntsssssysssssnhhcaaaaaa
aaaaaacnnntssszzAssAysnhhcaaaaaa
aaaaaacnnnttssBBBBssssnhhcaaaaaa
aaaaaabCCCDEtFsGGsssHDCDDbaaaaaa
aaaaaaaaaaabgIIIIIJgbaaaaaaaaaaa
aaaaaaaKLLLMnnnnnnhnMLLLNaaaaaaa
aaaaaKmhhhhOOOOPPOOOOhhhhiNaaaaa
aaaKmhhhhhhOOOOPPOOOOhhhhhhiNaaa
aKmhhhhhhhhOOOOPPOOOOhhhhhhhhiNa
--- legend ---
a = fg:panel_bg bg:panel_bg
b = fg:portrait_outline bg:panel_bg
c = fg:portrait_outline bg:portrait_outline
d = fg:plume_red bg:plume_red
e = fg:portrait_outline bg:plume_red
f = fg:portrait_outline bg:armor_steel
g = fg:portrait_outline bg:armor_steel_dark
h = fg:armor_steel bg:armor_steel
i = fg:armor_steel_light bg:armor_steel
j = fg:armor_steel bg:armor_steel_light
k = fg:portrait_outline bg:armor_steel_light
l = fg:armor_steel bg:armor_steel_dark
m = fg:armor_steel_dark bg:armor_steel
n = fg:armor_steel_dark bg:armor_steel_dark
o = fg:armor_steel_light bg:armor_steel_light
p = fg:armor_steel_dark bg:skin_tan_mid
q = fg:skin_tan_mid bg:brow_dark
r = fg:skin_tan bg:brow_dark
s = fg:skin_tan bg:skin_tan
t = fg:skin_tan_mid bg:skin_tan_mid
u = fg:portrait_outline bg:eye_white
v = fg:portrait_outline bg:eye_green
w = fg:armor_steel bg:skin_tan
x = fg:armor_steel bg:skin_tan_highlight
y = fg:skin_tan_highlight bg:skin_tan_highlight
z = fg:skin_tan bg:skin_tan_shadow
A = fg:skin_tan_highlight bg:skin_tan
B = fg:skin_tan bg:mouth_dark
C = fg:armor_steel_dark bg:portrait_outline
D = fg:armor_steel bg:portrait_outline
E = fg:skin_tan_mid bg:portrait_outline
F = fg:skin_tan bg:skin_tan_mid
G = fg:skin_tan_shadow bg:skin_tan
H = fg:skin_tan bg:portrait_outline
I = fg:skin_tan_mid bg:armor_steel_dark
J = fg:skin_tan bg:armor_steel
K = fg:armor_steel_dark bg:panel_bg
L = fg:armor_steel bg:panel_bg
M = fg:portrait_outline bg:cloth_red
N = fg:armor_steel_light bg:panel_bg
O = fg:cloth_red bg:cloth_red
P = fg:cloth_red_dark bg:cloth_red_dark
