crates/ui/src/snapshots/trpg_ui__portrait__tests__test_lord_dimmed.snap
---
source: crates/ui/src/portrait.rs
expression: "snap(\"test_lord\", \"neutral\", 0.5, false)"
---
            ▄▄▄▄▄▄▄▄            
         ▄▀▀▀▀▀▀▀▀▀▀▀▀▄         
       ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄       
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
         ▀▀▀▀▀▀▀▀▀▀▀▀▀▀         
          ▀▀▀▀▀▀▀▀▀▀▀▀          
            ▀▀▀▀▀▀▀▀            
       ▄▄▄▄▄▀▀▀▀▀▀▀▀▄▄▄▄▄       
     ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄     
   ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄   
 ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄ 
--- colours ---
aaaaaaaaaaaabbbbbbbbaaaaaaaaaaaa
aaaaaaaaabccddddeeeeccbaaaaaaaaa
aaaaaaabcedfgeeeeeeeeehcbaaaaaaa
aaaaaaieefeeeeeeheeeeeejeiaaaaaa
aaaaaaieeeekklemkkleekeejiaaaaaa
aaaaaaiejnoooonnnnooopqhjiaaaaaa
aaaaaaiernnstinunnitsqqmeiaaaaaa
aaaaaaiennnnnnnvnnnnnqqqeiaaaaaa
aaaaaabwwnnvxnnxyynnnqqwwbaaaaaa
aaaaaaaaainnnnzzzznnqqiaaaaaaaaa
aaaaaaaaaabAnnnBBnkqCbaaaaaaaaaa
aaaaaaaaaaaaiyDDDDDiaaaaaaaaaaaa
aaaaaaaEFFGHIJqqqqJIHGFFKaaaaaaa
aaaaaELMMMNOOOOPPOOOONMMMQKaaaaa
aaaELMMMMMNOOOORROOOONMMMMMQKaaa
aELMMMMMMMNOOOORROOOONMMMMMMMQKa
--- legend ---
a = fg:panel_bg bg:panel_bg
b = fg:#1d130d bg:panel_bg
c = fg:#1d130d bg:#4b2e1b
d = fg:#4b2e1b bg:#664125
e = fg:#4b2e1b bg:#4b2e1b
f = fg:#664125 bg:#664125
g = fg:#664125 bg:#4b2e1b
h = fg:#4b2e1b bg:#331f13
i = fg:#1d130d bg:#1d130d
j = fg:#331f13 bg:#331f13
k = fg:#81664e bg:#785943
l = fg:#331f13 bg:#785943
m = fg:#4b2e1b bg:#785943
n = fg:#81664e bg:#81664e
o = fg:#81664e bg:#2b1c11
p = fg:#785943 bg:#2b1c11
q = fg:#785943 bg:#785943
r = fg:#331f13 bg:#81664e
s = fg:#1d130d bg:#868077
t = fg:#1d130d bg:#2b485d
u = fg:#81664e bg:#867059
v = fg:#867059 bg:#867059
w = fg:#4b2e1b bg:#1d130d
x = fg:#867059 bg:#81664e
y = fg:#81664e bg:#6a4936
z = fg:#81664e bg:#4b211b
A = fg:#81664e bg:#1d130d
B = fg:#6a4936 bg:#81664e
C = fg:#785943 bg:#1d130d
D = fg:#785943 bg:#6a4936
E = fg:#767677 bg:panel_bg
F = fg:#5e5e60 bg:panel_bg
G = fg:#766029 bg:panel_bg
H = fg:#2b4065 bg:panel_bg
I = fg:#1d130d bg:#2b4065
J = fg:#785943 bg:#2b4065
K = fg:#3b3b3d bg:panel_bg
L = fg:#767677 bg:#5e5e60
M = fg:#5e5e60 bg:#5e5e60
N = fg:#766029 bg:#766029
O = fg:#2b4065 bg:#2b4065
P = fg:#766029 bg:#202e46
Q = fg:#3b3b3d bg:#5e5e60
R = fg:#202e46 bg:#202e46
