crates/ui/src/snapshots/trpg_ui__portrait__tests__test_lord_mirrored.snap
---
source: crates/ui/src/portrait.rs
expression: "snap(\"test_lord\", \"sad\", 0.0, true)"
---
            ▄▄▄▄▄▄▄▄            
         ▄▀▀▀▀▀▀▀▀▀▀▀▀▄         
       ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄       
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
         ▀▀▀▀▀▀▀▀▀▀▀▀▀▀         
          ▀▀▀▀▀▀▀▀▀▀▀▀          
            ▀▀▀▀▀▀▀▀            
       ▄▄▄▄▄▀▀▀▀▀▀▀▀▄▄▄▄▄       
     ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄     
   ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄   
 ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄ 
--- colours ---
aaaaaaaaaaaabbbbbbbbaaaaaaaaaaaa
aaaaaaaaabccddddeeeeccbaaaaaaaaa
aaaaaaabcfdddddddddghedcbaaaaaaa
aaaaaaidjddddddfddddddhddiaaaaaa
aaaaaaijddkddlkkmdlkkddddiaaaaaa
aaaaaaijfnopqqrrrrqqpprjdiaaaaaa
aaaaaaidmnnstirruritsrrvdiaaaaaa
aaaaaaidnnnwrrrrxrrrrrrrdiaaaaaa
aaaaaabyynnrrrzzArrAxrryybaaaaaa
aaaaaaaaainnrrrBBrrrrriaaaaaaaaa
aaaaaaaaaabCnkDEEDrrFbaaaaaaaaaa
aaaaaaaaaaaaiGGGGGziaaaaaaaaaaaa
aaaaaaaHIIJKLMnnnnMLKJIINaaaaaaa
aaaaaHOPPPQRRRRSSRRRRQPPPTNaaaaa
aaaHOPPPPPQRRRRUURRRRQPPPPPTNaaa
aHOPPPPPPPQRRRRUURRRRQPPPPPPPTNa
--- legend ---
a = fg:panel_bg bg:panel_bg
b = fg:portrait_outline bg:panel_bg
c = fg:portrait_outline bg:hair_brown
d = fg:hair_brown bg:hair_brown
e = fg:hair_brown bg:hair_brown_light
f = fg:hair_brown bg:hair_brown_dark
g = fg:hair_brown_light bg:hair_brown
h = fg:hair_brown_light bg:hair_brown_light
i = fg:portrait_outline bg:portrait_outline
j = fg:hair_brown_dark bg:hair_brown_dark
k = fg:skin_light bg:skin_light_mid
l = fg:hair_brown_dark bg:skin_light_mid
m = fg:hair_brown bg:skin_light_mid
n = fg:skin_light_mid bg:skin_light_mid
o = fg:skin_light_mid bg:brow_dark
p = fg:skin_light bg:brow_dark
q = fg:brow_dark bg:skin_light
r = fg:skin_light bg:skin_light
s = fg:portrait_outline bg:eye_white
t = fg:portrait_outline bg:eye_blue
u = fg:skin_light bg:skin_light_highlight
v = fg:hair_brown_dark bg:skin_light
w = fg:tear bg:tear
x = fg:skin_light_highlight bg:skin_light_highlight
y = fg:hair_brown bg:portrait_outline
z = fg:skin_light bg:skin_light_shadow
A = fg:skin_light_highlight bg:skin_light
B = fg:skin_light bg:mouth_dark
C = fg:skin_light_mid bg:portrait_outline
D = fg:mouth_dark bg:skin_light
E = fg:lip bg:skin_light
F = fg:skin_light bg:portrait_outline
G = fg:skin_light_mid bg:skin_light_shadow
H = fg:armor_steel_dark bg:panel_bg
I = fg:armor_steel bg:panel_bg
J = fg:trim_gold bg:panel_bg
K = fg:cloth_blue bg:panel_bg
L = fg:portrait_outline bg:cloth_blue
M = fg:skin_light_mid bg:cloth_blue
N = fg:armor_steel_light bg:panel_bg
O = fg:armor_steel_dark bg:armor_steel
P = fg:armor_steel bg:armor_steel
Q = fg:trim_gold bg:trim_gold
R = fg:cloth_blue bg:cloth_blue
S = fg:trim_gold bg:cloth_blue_dark
T = fg:armor_steel_light bg:armor_steel
U = fg:cloth_blue_dark bg:cloth_blue_dark
