crates/ui/src/snapshots/trpg_ui__portrait__tests__test_lord_neutral.snap
---
source: crates/ui/src/portrait.rs
expression: "snap(\"test_lord\", \"neutral\", 0.0, false)"
---
            ▄▄▄▄▄▄▄▄            
         ▄▀▀▀▀▀▀▀▀▀▀▀▀▄         
       ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄       
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
      ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀      
         ▀▀▀▀▀▀▀▀▀▀▀▀▀▀         
          ▀▀▀▀▀▀▀▀▀▀▀▀          
            ▀▀▀▀▀▀▀▀            
       ▄▄▄▄▄▀▀▀▀▀▀▀▀▄▄▄▄▄       
     ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄     
   ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄   
 ▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄ 
--- colours ---
aaaaaaaaaaaabbbbbbbbaaaaaaaaaaaa
aaaaaaaaabccddddeeeeccbaaaaaaaaa
aaaaaaabcedfgeeeeeeeeehcbaaaaaaa
aaaaaaieefeeeeeeheeeeeejeiaaaaaa
aaaaaaieeeekklemkkleekeejiaaaaaa
aaaaaaiejnoooonnnnooopqhjiaaaaaa
aaaaaaiernnstinunnitsqqmeiaaaaaa
aaaaaaiennnnnnnvnnnnnqqqeiaaaaaa
aaaaaabwwnnvxnnxyynnnqqwwbaaaaaa
aaaaaaaaainnnnzzzznnqqiaaaaaaaaa
aaaaaaaaaabAnnnBBnkqCbaaaaaaaaaa
aaaaaaaaaaaaiyDDDDDiaaaaaaaaaaaa
aaaaaaaEFFGHIJqqqqJIHGFFKaaaaaaa
aaaaaELMMMNOOOOPPOOOONMMMQKaaaaa
aaaELMMMMMNOOOORROOOONMMMMMQKaaa
aELMMMMMMMNOOOORROOOONMMMMMMMQKa
--- legend ---
a = fg:panel_bg bg:panel_bg
b = fg:portrait_outline bg:panel_bg
c = fg:portrait_outline bg:hair_brown
d = fg:hair_brown bg:hair_brown_light
e = fg:hair_brown bg:hair_brown
f = fg:hair_brown_light bg:hair_brown_light
g = fg:hair_brown_light bg:hair_brown
h = fg:hair_brown bg:hair_brown_dark
i = fg:portrait_outline bg:portrait_outline
j = fg:hair_brown_dark bg:hair_brown_dark
k = fg:skin_light bg:skin_light_mid
l = fg:hair_brown_dark bg:skin_light_mid
m = fg:hair_brown bg:skin_light_mid
n = fg:skin_light bg:skin_light
o = fg:skin_light bg:brow_dark
p = fg:skin_light_mid bg:brow_dark
q = fg:skin_light_mid bg:skin_light_mid
r = fg:hair_brown_dark bg:skin_light
s = fg:portrait_outline bg:eye_white
t = fg:portrait_outline bg:eye_blue
u = fg:skin_light bg:skin_light_highlight
v = fg:skin_light_highlight bg:skin_light_highlight
w = fg:hair_brown bg:portrait_outline
x = fg:skin_light_highlight bg:skin_light
y = fg:skin_light bg:skin_light_shadow
z = fg:skin_light bg:mouth_dark
A = fg:skin_light bg:portrait_outline
B = fg:skin_light_shadow bg:skin_light
C = fg:skin_light_mid bg:portrait_outline
D = fg:skin_light_mid bg:skin_light_shadow
E = fg:armor_steel_light bg:panel_bg
F = fg:armor_steel bg:panel_bg
G = fg:trim_gold bg:panel_bg
H = fg:cloth_blue bg:panel_bg
I = fg:portrait_outline bg:cloth_blue
J = fg:skin_light_mid bg:cloth_blue
K = fg:armor_steel_dark bg:panel_bg
L = fg:armor_steel_light bg:armor_steel
M = fg:armor_steel bg:armor_steel
N = fg:trim_gold bg:trim_gold
O = fg:cloth_blue bg:cloth_blue
P = fg:trim_gold bg:cloth_blue_dark
Q = fg:armor_steel_dark bg:armor_steel
R = fg:cloth_blue_dark bg:cloth_blue_dark
